Bug 458274 - Terrible contrast on dark mode
Summary: Terrible contrast on dark mode
Status: RESOLVED FIXED
Alias: None
Product: filelight
Classification: Applications
Component: general (other bugs)
Version First Reported In: 22.08.0
Platform: Arch Linux Linux
: VHI normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords: regression
: 458373 458601 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-08-24 23:08 UTC by Alice
Modified: 2022-09-01 16:23 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 22.08.1
Sentry Crash Report:


Attachments
bad contrast, text is hard to read (131.37 KB, image/png)
2022-08-24 23:08 UTC, Alice
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alice 2022-08-24 23:08:33 UTC
Created attachment 151566 [details]
bad contrast, text is hard to read

SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1. Use breeze dark/materia dark/any QT dark theme
2. Open KDE File Light

OBSERVED RESULT

[Attached]

EXPECTED RESULT


SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Arch Linux
(available in About System)
KDE Plasma Version: 5.25.4
KDE Frameworks Version: 5.97.0
Qt Version: 5.15.5

ADDITIONAL INFORMATION
Comment 1 Alice 2022-08-24 23:12:05 UTC
I ran an older appimage version I found at https://apprepo.de/appimage/filelight, and here the text is in white when in dark mode and is readable
Comment 2 Nate Graham 2022-08-25 10:48:36 UTC
Oops. I guess I forgot to test that while QAing it. :/
Comment 3 Harald Sitter 2022-08-25 16:40:55 UTC
Git commit 9f05f93c0493d6b696e31bcc11a486ff091f782c by Harald Sitter.
Committed on 25/08/2022 at 14:14.
Pushed by sitter into branch 'master'.

explicitly set pen color before painting text

otherwise the colors may be off

M  +4    -0    src/radialMap/item.cpp

https://invent.kde.org/utilities/filelight/commit/9f05f93c0493d6b696e31bcc11a486ff091f782c
Comment 4 Harald Sitter 2022-08-25 16:44:14 UTC
Git commit d83ba0cf2020a4ad324a0945a211ef07c25dc917 by Harald Sitter.
Committed on 25/08/2022 at 16:44.
Pushed by sitter into branch 'release/22.08'.

explicitly set pen color before painting text

otherwise the colors may be off


(cherry picked from commit 9f05f93c0493d6b696e31bcc11a486ff091f782c)

M  +4    -0    src/radialMap/item.cpp

https://invent.kde.org/utilities/filelight/commit/d83ba0cf2020a4ad324a0945a211ef07c25dc917
Comment 5 Patrick Silva 2022-08-27 14:17:22 UTC
*** Bug 458373 has been marked as a duplicate of this bug. ***
Comment 6 Nate Graham 2022-09-01 16:23:10 UTC
*** Bug 458601 has been marked as a duplicate of this bug. ***