explicitly set pen color before painting text

otherwise the colors may be off

BUG: 458274